<resources>
    <string name="app_name">BikesShare</string>
    <string name="action_settings">Settings</string>
    <string name="sign_up">Register now</string>
    <string name="sign_in">Log in</string>
    <string name="first_name">Username:</string>
    <string name="last_name">Full Name:</string>
    <string name="email">First Name:</string>
    <string name="postcode">Postcode:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="post_code">Post Code:</string>
    <string name="account_number">Account Number:</string>
    <string name="welcome_text">Hello and Welcome to Bike Share!</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in_successful">You have successfully signed in!</string>
    <string name="chooseStation">The Station you choose is :</string>
    <string name="ReturnSuccessful">Bike has been returned successfully!</string>
    <string name="sign_up_successful">You have successfully signed up!</string>
    <string name="bike_avail">Bikes are available</string>
    <string name="bike_not_avaail">Sorry, no bikes available</string>
    <string name="report">Report</string>
    <string name="bikeinmain">bikeinmain</string>
    <string name="reportbutton">reportbutton</string>

    <string name="station_name">Station Name</string>
    <string name="station_address">Address</string>
    <string name="distance">Distance</string>
    <string name="back_button">Back</string>
    <string name="book_button">Book</string>
    <string name="bike_booked_msg">Bike booked successfully!</string>
    <string name="back_to_map_msg">Navigating back to map</string>
    

    <string name="wallet">wallet</string>


    <string name="move_bike">Move a Bike</string>
    <string name="station_to">To Station</string>
    <string name="station_from">From Station</string>
    <string name="move_bike_button">Move</string>
    <string name="show_bikes">Show Bikes</string>
    <string name="bike_moved">The move was successful!</string>
    <string name="bike_moved_unsuccess">The move was unsuccessful!</string>
    <string name="capacity_exceeded">Sorry, there is no space in the target station!</string>

    <string name="BikeId">Bike Id</string>
    <string name="BikeStation">Station</string>
    <string name="BikeStatus">Status</string>
    <string name="bike_book">You have booked bike with id: </string>



</resources>
