<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Move">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/bikes_to"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="310dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/bikes_from"
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="162dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/move"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:text="@string/move_bike_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></Button>
    </RelativeLayout>



    <TextView
        android:id="@+id/move_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="637dp"
        android:text="@string/move_bike"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/bikes_from_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="51dp"
        android:text="@string/station_from"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/move_title"
        />

    <TextView
        android:id="@+id/bikes_to_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:layout_marginBottom="476dp"
        android:text="@string/station_to"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/get_bikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="346dp"
        android:layout_marginBottom="338dp"
        android:text="@string/show_bikes"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:layout_weight="2"
        app:layout_constraintBottom_toBottomOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="@+id/get_bikes"
        app:layout_constraintStart_toStartOf="@+id/get_bikes"
        app:layout_constraintTop_toBottomOf="@+id/get_bikes">

        <LinearLayout
            android:id="@+id/checkBox"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent">


        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>