<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">
<TextView
    android:id="@+id/Track_title"

    android:layout_width="wrap_content"
    android:layout_height="80dp"

    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_weight="1"
    android:text="Track"
    android:textColor="@color/colorPrimary"
    android:textSize="40dp"
    app:fontFamily="@font/hind_madurai_medium"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />








    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <TableLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shrinkColumns="0"
            android:stretchColumns="*"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            >

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2.5dp"
                    android:text="@string/BikeId"
                    app:fontFamily="@font/hind_madurai_medium"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2.5dp"
                    android:text="@string/BikeStation"
                    app:fontFamily="@font/hind_madurai_medium"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2.5dp"
                    android:text="@string/BikeStatus"
                    app:fontFamily="@font/hind_madurai_medium"
                    android:textSize="18sp" />


            </TableRow>

            <TableLayout
                android:id="@+id/bike_track_table"
                android:stretchColumns="*"
                android:shrinkColumns="0"
                app:fontFamily="@font/hind_madurai_medium">

            </TableLayout>
        </TableLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>