<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"

    >

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar2"
        />



        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:text="Phone_number"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/phoneNumberEntry" />

        <TextView
            android:id="@+id/firstName"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:text="@string/first_name"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/firstNameEntry" />

        <TextView
            android:id="@+id/lastName"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:text="@string/last_name"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lastNameEntry" />

        <TextView
            android:id="@+id/password"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textSize="20dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/passwordEntry" />

        <TextView
            android:id="@+id/confirmPassword"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:textSize="20dp"

            android:text="@string/confirm_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ConfirmPassword" />

        <TextView
            android:id="@+id/email"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:text="Email"
            android:textSize="20dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/emailEntry" />

        <TextView
            android:id="@+id/postCode"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="250dp"
            android:layout_marginTop="20dp"
            android:text="@string/post_code"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/postCodeEntry" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="200dp"
            android:textColor="#FAFFFFFF"
            android:layout_marginTop="80dp"
            android:text="Submit"
            android:layout_centerInParent="true"
            android:background="@drawable/shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/checkBox2" />

        <EditText
            android:id="@+id/passwordEntry"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/lastNameEntry" />

        <EditText
            android:id="@+id/ConfirmPassword"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/passwordEntry" />

        <EditText
            android:id="@+id/firstNameEntry"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:inputType="textPersonName"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/sign_up_title" />

        <EditText
            android:id="@+id/lastNameEntry"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="textPersonName"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/firstNameEntry" />

        <EditText
            android:id="@+id/phoneNumberEntry"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/emailEntry" />

        <TextView
            android:id="@+id/sign_up_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal|center"
            android:text="@string/sign_up"
            android:layout_gravity="center"
            app:fontFamily="@font/hind_madurai_medium"
            android:textColor="@color/colorPrimary"

            android:layout_marginTop="100dp"
            android:textSize="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailEntry"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ConfirmPassword" />

        <EditText
            android:id="@+id/postCodeEntry"

            android:layout_width="169dp"

            android:layout_height="50dp"
            android:layout_marginStart="200dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="35dp"
            android:ems="10"
            android:inputType="textPostalAddress"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/phoneNumberEntry" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register as a Operator"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/postCodeEntry"/>


</androidx.constraintlayout.widget.ConstraintLayout>




